Fixed multimedia and added flex wrap to page-content

--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -70,6 +70,7 @@
     }
     .group-body {
         display: flex;
+        flex-wrap: wrap;
         h2, .subtitle {
             flex: 1 0 100%;
         }
